# polyhedra

./: .gitignore  CMakeLists.txt  README.md  polyhedra  polyhedra.c
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shapes/: cube.shape  tesseract.shape
src/: main.c  shapes.c  shapes.h
